# ToDolist

./: CMakeLists.txt  README.md  main.cpp
Save_list/: saves.txt
include/: Task.hpp  ToDo.hpp
src/: Task.cpp  ToDo.cpp  settings.cpp
